Use valueOf() and parseXXX() methods to create Number             objects in ExpressionParser